--- a/less_6_react/src/index.css
+++ b/less_6_react/src/index.css
@@ -92,3 +92,24 @@ body {
     cursor: pointer;
     min-width: 120px;
 }
+
+.modal_wrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(128 128 128 / 80%);
+}
+
+.modal_value {
+    max-width: 700px;
+    margin: 0 auto;
+    margin-top: 200px;
+    background: white;
+    padding: 24px;
+}
+
+.modal_content {}
+
+.modal_btn {}
